Fix blog image overflow

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -98,6 +98,7 @@ footer {
 
 .blog-image {
     height: 300px;
+    max-width: 100%;
 }
 
 blockquote {
